devise basic authentication

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,32 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require bootstrap.min
  *= require_tree .
  *= require_self
  */
+
+
+ #navbar ul {
+   margin: 0;
+   padding: 5px;
+   list-style-type: none;
+   text-align: center;
+   background-color: #000;
+ }
+
+ #navbar ul li {
+   display: inline;
+ }
+
+ #navbar ul li a {
+   text-decoration: none;
+   padding: .2em 1em;
+   color: #fff;
+   background-color: #000;
+ }
+
+ #navbar ul li a:hover {
+   color: #000;
+   background-color: #fff;
+ }
