--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
 
   <body>
+    <div id="navbar">
+      <ul>
+        <% if current_user %>
+          <li><%= current_user.email %> | <%= link_to "Sign out", new_user_registration_path %></li>
+        <% else %>
+          <li><%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %></li>
+        <% end %>
+      </ul>
+    </div>
+
     <%= yield %>
   </body>
 </html>
